# thesis

./: README.md  index.html
.github/workflows/: build-thesis-pdf.yml  build-thesis-web.yml
experiments/: README.md  requirements.txt
experiments/data/: README.md  imagenet_subset_generator.ipynb
experiments/depth_estimation/: depth_estimation_anomaly_impact.ipynb  depth_estimation_nyu.ipynb  depth_estimation_nyu_like_beyond_surface_statistics.ipynb
experiments/linear_probe_classification/: classification-hydra.py  classification-parallel-on-the-fly-dataset-generation.ipynb  classification-parallel.ipynb  classification-single.ipynb  representation-dataset-generation.ipynb
experiments/other/: style_transfer_replicate.ipynb  svg_compression.ipynb
experiments/other/hydrahelper/: README.md  __init__.py  hydrahelper.py  pyproject.toml  slurm-job-submitter-test.py
experiments/representation_exploration/: .gitignore  anomaly_similarities.ipynb  attention-maps.ipynb  corner_anomalies.ipynb  dataset-generation.ipynb  empty-similarity-analysis.ipynb  generated_reprs_vs_extracted.ipynb  h-space-clustering.ipynb  h-space-locality-test-server.ipynb  h-space-locality-test.ipynb  h-space-norms-highest.ipynb  h-space-norms-histogram.ipynb  h-space-norms-tileplot.ipynb  high_norm_anomalies_over_layers.ipynb  influence-of-masking.ipynb  norm-anomalies-search.ipynb  norm-distribution-over-dataset.ipynb  position_classifier.ipynb  position_classifier_spair.ipynb  (+6 more)
thesis/: .gitignore  README.md  _quarto.yml  bibliography.bib  bibliography_analyzer.ipynb  index.qmd
(+124 files in other folders)
